plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jiltsa'
version = '1.1.0'
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// Patch-level overrides of Boot-managed versions with open CVEs (drop once Boot manages a fixed version)
ext['tomcat.version'] = '10.1.60'
ext['log4j2.version'] = '2.25.5'
ext['jackson-bom.version'] = '2.21.5'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'


	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'

	//testRuntimeOnly 'com.h2database:h2'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'

	constraints {
		// Testcontainers 1.21.x still ships commons-compress 1.24.0 (CVE-2024-25710, CVE-2024-26308)
		testImplementation 'org.apache.commons:commons-compress:1.28.0'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// Only the executable jar is wanted, so build/libs/*.jar is unambiguous for the Dockerfile
tasks.named('jar') {
	enabled = false
}

// The dev profile holds local credentials and is gitignored; it must never end up in the artifact
tasks.named('bootJar') {
	exclude '**/application-dev.properties'
}
